--- a/code/jupyter_code.ipynb
+++ b/code/jupyter_code.ipynb
@@ -29,7 +29,8 @@
    "outputs": [],
    "source": [
     "s = tf.constant(2)\n",
-    "m = tf.constant([[1,2],[3,4]])"
+    "m = tf.constant([[1,2],[3,4]])\n",
+    "m = tf.constant([1,2,3,4],shape=[2,2])"
    ]
   },
   {
@@ -202,6 +203,487 @@
     "\\end{array}} \\right){\\rm{ + }}\\left( {\\begin{array}{*{20}{c}}\n",
     "{\\rm{1}}&{\\rm{2}}\n",
     "\\end{array}} \\right)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tf.Variable(3.0)\n",
+    "with tf.GradientTape() as tape:\n",
+    "  y = x**2\n",
+    "dy_dx = tape.gradient(y, x)\n",
+    "# dy = 2x * dx\n",
+    "with tfv1.Session() as sess:\n",
+    "    sess.run(tfv1.global_variables_initializer())\n",
+    "    print(sess.run(dy_dx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x0 = tf.Variable(3.0, name='x0')\n",
+    "x1 = tf.Variable(3.0, name='x1', trainable=False)\n",
+    "x2 = tf.Variable(2.0, name='x2') + 1.0\n",
+    "x3 = tf.constant(3.0, name='x3')\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "  y = (x0**2) + (x1**2) + (x2**2) \n",
+    "\n",
+    "# change x0 to more ?\n",
+    "grad = tape.gradient(y, [x0])\n",
+    "\n",
+    "with tfv1.Session() as sess:\n",
+    "    sess.run(tfv1.global_variables_initializer())\n",
+    "    print(sess.run(grad))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = tf.constant(1)\n",
+    "t2 = tf.constant(2)\n",
+    "def f1(): return t1+t2\n",
+    "def f2(): return t1-t2\n",
+    "res = tf.cond(t1<t2,f1,f2)\n",
+    "with tfv1.Session() as sess:\n",
+    "    print(sess.run(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = tf.constant(1)\n",
+    "t2 = tf.constant(5)\n",
+    "body = (tf.add(t1,1),t2)\n",
+    "def cond(t1,t2): return t1<t2\n",
+    "def body(t1,t2): \n",
+    "    t1 = tf.add(t1,1)\n",
+    "    return [t1,t2]\n",
+    "res = tf.while_loop(cond,body,[t1,t2])\n",
+    "with tfv1.Session() as sess:\n",
+    "    print(sess.run(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## notice the difference between [t1,t2] and (t1,t2)\n",
+    "t1 = tf.constant(1)\n",
+    "t2 = tf.constant(5)\n",
+    "body = (tf.add(t1,1),t2)\n",
+    "def cond(t1,t2): return t1<t2\n",
+    "def body(t1,t2): \n",
+    "    t1 = tf.add(t1,1)\n",
+    "    return (t1,t2)\n",
+    "res = tf.while_loop(cond,body,(t1,t2))\n",
+    "with tfv1.Session() as sess:\n",
+    "    print(sess.run(res))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  # Example of Linear Rregression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construct one iteration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### True model $Y = X\\left( {\\begin{array}{*{20}{c}}\n",
+    "1\\\\\n",
+    "5\n",
+    "\\end{array}} \\right) + \\varepsilon ,\\varepsilon  \\sim N\\left( {0,1} \\right)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "n_size = 5000\n",
+    "X = np.random.normal(0.0,1.0,size=(n_size ,2))\n",
+    "## beta real = (1.0,5.0)\n",
+    "Y = np.dot(X,np.matrix([[1.0],[5.0]])) + np.random.normal(0.0,1.0,size=(n_size ,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.05112322]\n",
+      " [4.88923014]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "beta = tf.Variable(np.array([[0.0],[0.0]]))\n",
+    "with tf.GradientTape() as tape:\n",
+    "    error = tf.subtract(Y,tf.matmul(X,beta))\n",
+    "    loss = tf.reduce_mean(tf.multiply(error,error))\n",
+    "grad = beta - 0.5*tape.gradient(loss,beta)\n",
+    "with tfv1.Session() as sess:\n",
+    "    sess.run(tfv1.global_variables_initializer())\n",
+    "    print(sess.run(grad))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Linear_Regression():\n",
+    "    def __init__(self):\n",
+    "        self.beta = tf.Variable(np.array([[0.0],[0.0]]),dtype='float64')\n",
+    "        \n",
+    "    def loss(self,x,y):\n",
+    "        error = tf.subtract(y,tf.matmul(x,self.beta))\n",
+    "        loss = tf.reduce_mean(tf.multiply(error,error))\n",
+    "        return loss\n",
+    "    \n",
+    "    def fit(self,x,y,gamma=0.5):\n",
+    "        maxit = 100\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            tape.watch(self.beta)\n",
+    "            curent_loss = self.loss(x=X,y=Y)\n",
+    "        dw = tape.gradient(curent_loss,self.beta)\n",
+    "        self.beta = self.beta.assign_sub(gamma * dw)\n",
+    "        with tfv1.Session() as sess:\n",
+    "            sess.run(tfv1.global_variables_initializer())\n",
+    "            for it in range(maxit):\n",
+    "                print(sess.run(self.beta))\n",
+    "            print(sess.run(self.beta))\n",
+    "    \n",
+    "    def predict(self,x):\n",
+    "        y_predict = tf.matmul(x,self.beta)\n",
+    "        with tfv1.Session() as sess:\n",
+    "            sess.run(tfv1.global_variables_initializer())\n",
+    "            return sess.run(y_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Linear_Regression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.05112322]\n",
+      " [4.88923014]]\n",
+      "[[1.00158613]\n",
+      " [4.98901581]]\n",
+      "[[1.00068809]\n",
+      " [4.99174733]]\n",
+      "[[1.00066278]\n",
+      " [4.99181762]]\n",
+      "[[1.00066213]\n",
+      " [4.99181945]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n",
+      "[[1.00066212]\n",
+      " [4.9918195 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimation ${{\\hat \\beta }^{\\left( {100} \\right)}} = {\\left( {1.00066212,4.9918195} \\right)^T}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.94035335]])"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(np.ones((1,2)))"
    ]
   },
   {
